Added code to remove rows missing entries in csv

--- a/ces_data_cleaning.ipynb
+++ b/ces_data_cleaning.ipynb
@@ -256,11 +256,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Census Tract</th>\n",
+       "      <th>Total Population</th>\n",
+       "      <th>California County</th>\n",
+       "      <th>ZIP</th>\n",
+       "      <th>Nearby City</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Traffic</th>\n",
+       "      <th>Traffic Pctl</th>\n",
+       "      <th>Pollution Burden</th>\n",
+       "      <th>Pollution Burden Score</th>\n",
+       "      <th>Pollution Burden Pctl</th>\n",
+       "      <th>Asthma</th>\n",
+       "      <th>Asthma Pctl</th>\n",
+       "      <th>Poverty</th>\n",
+       "      <th>Poverty Pctl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6019001100</td>\n",
+       "      <td>3174</td>\n",
+       "      <td>Fresno</td>\n",
+       "      <td>93706</td>\n",
+       "      <td>Fresno</td>\n",
+       "      <td>-119.781696</td>\n",
+       "      <td>36.709695</td>\n",
+       "      <td>909.14</td>\n",
+       "      <td>62.98</td>\n",
+       "      <td>79.96</td>\n",
+       "      <td>9.85</td>\n",
+       "      <td>99.95</td>\n",
+       "      <td>131.64</td>\n",
+       "      <td>97.67</td>\n",
+       "      <td>76.3</td>\n",
+       "      <td>97.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6071001600</td>\n",
+       "      <td>6133</td>\n",
+       "      <td>San Bernardino</td>\n",
+       "      <td>91761</td>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>-117.618013</td>\n",
+       "      <td>34.057780</td>\n",
+       "      <td>782.26</td>\n",
+       "      <td>55.66</td>\n",
+       "      <td>81.19</td>\n",
+       "      <td>10.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>60.66</td>\n",
+       "      <td>69.78</td>\n",
+       "      <td>72.5</td>\n",
+       "      <td>94.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6019000200</td>\n",
+       "      <td>3167</td>\n",
+       "      <td>Fresno</td>\n",
+       "      <td>93706</td>\n",
+       "      <td>Fresno</td>\n",
+       "      <td>-119.805504</td>\n",
+       "      <td>36.735491</td>\n",
+       "      <td>576.52</td>\n",
+       "      <td>39.00</td>\n",
+       "      <td>71.16</td>\n",
+       "      <td>8.76</td>\n",
+       "      <td>99.00</td>\n",
+       "      <td>142.12</td>\n",
+       "      <td>98.33</td>\n",
+       "      <td>86.8</td>\n",
+       "      <td>99.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6077000801</td>\n",
+       "      <td>6692</td>\n",
+       "      <td>San Joaquin</td>\n",
+       "      <td>95203</td>\n",
+       "      <td>Stockton</td>\n",
+       "      <td>-121.314524</td>\n",
+       "      <td>37.940517</td>\n",
+       "      <td>1305.01</td>\n",
+       "      <td>78.29</td>\n",
+       "      <td>74.48</td>\n",
+       "      <td>9.17</td>\n",
+       "      <td>99.59</td>\n",
+       "      <td>142.17</td>\n",
+       "      <td>98.34</td>\n",
+       "      <td>61.3</td>\n",
+       "      <td>85.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6019001500</td>\n",
+       "      <td>2206</td>\n",
+       "      <td>Fresno</td>\n",
+       "      <td>93725</td>\n",
+       "      <td>Fresno</td>\n",
+       "      <td>-119.717843</td>\n",
+       "      <td>36.681600</td>\n",
+       "      <td>435.16</td>\n",
+       "      <td>24.30</td>\n",
+       "      <td>80.20</td>\n",
+       "      <td>9.88</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>90.48</td>\n",
+       "      <td>89.54</td>\n",
+       "      <td>66.4</td>\n",
+       "      <td>90.23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Census Tract  Total Population California County    ZIP Nearby City  \\\n",
+       "0    6019001100              3174           Fresno   93706      Fresno   \n",
+       "1    6071001600              6133    San Bernardino  91761     Ontario   \n",
+       "2    6019000200              3167           Fresno   93706      Fresno   \n",
+       "3    6077000801              6692       San Joaquin  95203    Stockton   \n",
+       "4    6019001500              2206           Fresno   93725      Fresno   \n",
+       "\n",
+       "    Longitude   Latitude  Traffic  Traffic Pctl  Pollution Burden  \\\n",
+       "0 -119.781696  36.709695   909.14         62.98             79.96   \n",
+       "1 -117.618013  34.057780   782.26         55.66             81.19   \n",
+       "2 -119.805504  36.735491   576.52         39.00             71.16   \n",
+       "3 -121.314524  37.940517  1305.01         78.29             74.48   \n",
+       "4 -119.717843  36.681600   435.16         24.30             80.20   \n",
+       "\n",
+       "   Pollution Burden Score  Pollution Burden Pctl  Asthma  Asthma Pctl  \\\n",
+       "0                    9.85                  99.95  131.64        97.67   \n",
+       "1                   10.00                 100.00   60.66        69.78   \n",
+       "2                    8.76                  99.00  142.12        98.33   \n",
+       "3                    9.17                  99.59  142.17        98.34   \n",
+       "4                    9.88                  99.99   90.48        89.54   \n",
+       "\n",
+       "   Poverty  Poverty Pctl  \n",
+       "0     76.3         97.12  \n",
+       "1     72.5         94.63  \n",
+       "2     86.8         99.56  \n",
+       "3     61.3         85.57  \n",
+       "4     66.4         90.23  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ces.to_csv('Resources/clean_ces_v1.csv', header=True)"
+    "ces.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8035"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ces)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7908"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ces = ces.dropna(how=\"any\")\n",
+    "len(ces)"
    ]
   },
   {
@@ -268,7 +483,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ces.to_csv('Resources/clean_ces_v1.csv', header=True)"
+   ]
   }
  ],
  "metadata": {
